--- a/‌index.html
+++ b/‌index.html
@@ -1,30 +1,10 @@
 <!DOCTYPE html>
 <html>
-
-
-
-
-<head>
-
-
-<title><b>EEG1 wake sleep stages</b></title>
-
-
-</head>
-
-
-
-
 <body>
 
+<h1>My First Heading</h1>
 
-
-<p>EEG may appear to the untrained eye as a bunch of noisy lines from which no information can be extracted. 
-A sort of Rorschach test with ambiguous inkblots where what is seen depends largely on what is already
- in one's mind.</p>
-
-
+<p>My first paragraph.</p>
 
 </body>
-
 </html>
