--- a/EEG1_index.html
+++ b/EEG1_index.html
@@ -561,6 +561,61 @@ EEG: identifying wakefulness and the different stages of sleep. This will be a g
 
 
 
+
+<br clear="all" />
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+
+
+
+<h2><b>SUMMARY</b></h2>
+<p><b>After reviewing this post, you are able to identify most EEG tracings as belonging to wakefulness,
+ drowsiness, stage II sleep, and stage III sleep.
+<br>
+True! The EEGs in this post are straightforward examples. There are EEG portions that do not exactly fit
+ the typical case. In addition, this post did not go over how to identify REM sleep. However, just learning
+ the simple table below (not much effort) you will be able to classify most EEG pages into wakefulness or one of the sleep stages.
+ That will take you a long way!</b></p>
+<br>
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+</style>
+<center><table class="tg">
+<thead>
+  <tr>
+    <th class="tg-0lax"><b>Wakefulness</b></th>
+    <th class="tg-0lax"><b>Eyeblinks, posterior dominant rhythm, muscle artifact</b></th>
+  </tr>
+</thead>
+<tbody>
+  <tr>
+    <td class="tg-0lax"><b>Drowsiness</b></td>
+    <td class="tg-0lax"><b>Vertex waves, no spindles</b></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax"><b>Stage II sleep</b></td>
+    <td class="tg-0lax"><b>Spindles (vertex waves persist)</b></td>
+  </tr>
+  <tr>
+    <td class="tg-0lax"><b>Stage III sleep</b></td>
+    <td class="tg-0lax"><b>Diffuse slow waves (spindles persist)</b></td>
+  </tr>
+</tbody>
+</table></center>
+
+
 </body>
 
 </html>
